--- a/css/style-funtome-paki.css
+++ b/css/style-funtome-paki.css
@@ -4,15 +4,60 @@
     margin-bottom: 90px;
 }
 
+.sorting-pak-style {
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 21px;
+    color: #222222;
+    margin-right: 20px;
+}
+
+input[type=radio] {display: none;}
+
+input[type=radio] + label:before {
+    content: "\2714";
+    color: transparent;
+    display: inline-block;
+    border: 1px solid #E5E5E5;
+    border-radius: 8px;
+    font-size: 36px;
+    font-weight: 900;
+    line-height: 22px;
+    margin-right: 10px;
+    height: 26px;
+    width: 26px;
+    text-align: center;
+    vertical-align: middle;
+    transition: color ease .3s;
+}
+
+input[type=radio]:checked + label:before {
+    color: #1FB14D;
+    border-color: #E5E5E5;
+}
+
+.sorting-bold {
+    font-weight: 500;
+    margin-right: 25px;
+}
+
 .paki-catalog {
     display: flex;
     position: relative;
+    margin-bottom: 100px;
 }
 
 .card-paki {
     max-width: 285px;
     width: 100%;
     height: 450px;
+    margin-left: 33px;
+}
+
+.card-paki:first-child {
+    margin-left: 0;
 }
 
 .photo-paki {
@@ -21,8 +66,8 @@
 
 .description-paki {
     display: flex;
-    margin-top: -10px;
-    width: 285px;
+    margin-top: -15px;
+    width: 283px;
     height: 160px;
     box-sizing: border-box;
     border-radius: 8px;
@@ -32,7 +77,10 @@
 
 .border-paki {
     width: 100%;
-    padding: 13px 15px;
+    padding: 28px 15px 13px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .title-paki {
