--- a/css/style.css
+++ b/css/style.css
@@ -293,11 +293,12 @@ a {
     display: flex;
     position: absolute;
     top: -50%;
+    left: 0;
     transform: translateY(50%);
   }
   
   .intro-content {
-    width: 50%;
+    width: 100%;
     margin-top: 40px;
     margin-right: 200px;
   }
@@ -340,6 +341,7 @@ a {
   
   .text-red {
     color: #F02B53;
+    font-weight: bold;
   }
   
   .content-text {
