--- a/css/style-funtome-features.css
+++ b/css/style-funtome-features.css
@@ -1,14 +1,17 @@
 
+.intro {
+    background: url('/img/funtome-features/banner-features-desc.jpg') center no-repeat;
+    background-size: cover;
+}
+
 .intro-features {
     width: 100%;
     height: auto;
-    position: relative;
 }
 
 .features-container {
-    position: absolute;
-    /* top: -50%; */
-    transform: translateY(90%);
+    width: 100%;
+    margin-top: 194px;
 }
 
 .features-banner-title {
@@ -29,21 +32,12 @@
 .features-iteam {
     display: flex;
     position: relative;
-   /*  margin-bottom: 120px; */
 }
 
 .features-photo {
     width: 680px;
     height: 560px;
 }
-
-/* .container-fon {
-    width: 560px;
-    height: 450px;
-    background: #556D84;
-    box-shadow: 0px 0px 10px rgba(0, 39, 179, 0.08);
-    border-radius: 20px;  
-} */
 
 .container-img-left {
     position: absolute;
