--- a/css/style.css
+++ b/css/style.css
@@ -154,8 +154,9 @@ a {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
-    /* padding-left: 20px;
-    padding-right: 20px; */
+    padding-left: 20px;
+    padding-right: 20px;
+    overflow: hidden;
 }
 
 .container-center {
@@ -195,7 +196,7 @@ a {
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
     position: relative;
   }
-  
+
   .header-container {
     display: flex;
     flex-direction: row;
@@ -240,7 +241,7 @@ a {
     margin-left: 0;
   }
   
-  .nav-list li {
+  .link-home {
     font-family: "Comfortaa", sans-serif;
     font-style: normal;
     font-weight: bold;
@@ -272,15 +273,13 @@ a {
 /*===================intro=================*/
 
 .intro {
-    flex-direction: column;
-    height: auto;
-    position: relative;
-    background-size: cover;
-    width: 100%;
-    overflow: hidden;
-    align-items: center;
-    display: flex;
-  }
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 1000px;
+  padding-top: 83px;
+}
   
   .intro-banner {
     /* height: 1000px;
