--- a/css/style-funtome-blog.css
+++ b/css/style-funtome-blog.css
@@ -1,14 +1,12 @@
 
-.intro-features {
-    width: 100%;
-    height: auto;
-    position: relative;
+.blog {
+    background: url('/img/funtome-blog/blog-photo-desc.jpg') center no-repeat;
+    background-size: cover;
 }
 
 .features-container {
-    position: absolute;
-    /* top: -50%; */
-    transform: translateY(90%);
+    width: 100%;
+    margin-top: 194px;
 }
 
 .features-banner-title {
