--- a/css/style.css
+++ b/css/style.css
@@ -79,15 +79,15 @@ time,
 mark,
 audio,
 video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font-family: inherit;
-    font-weight: inherit;
-    font-style: inherit;
-    vertical-align: baseline;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font-family: inherit;
+  font-weight: inherit;
+  font-style: inherit;
+  vertical-align: baseline;
+  box-sizing: border-box;
 }
 
 :focus {
@@ -95,182 +95,172 @@ video {
 }
 
 body {
-    line-height: 1;
-    color: #00353F;
-    font-family: 'Comfortaa', sans-serif;
-    font-weight: 400;
-    font-size: 0.9rem;
-    -webkit-text-size-adjust: none;
+  line-height: 1;
+  color: #00353F;
+  font-family: 'Comfortaa', sans-serif;
+  font-weight: 400;
+  font-size: 0.9rem;
+  -webkit-text-size-adjust: none;
 }
 
 .app {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 ol,
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 a,
 a:hover {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 a {
-    color: inherit;
+  color: inherit;
 }
 
 .mr20 {
-    margin-right: 20px;
+  margin-right: 20px;
 }
 
 .mr25 {
-    margin-right: 25px;
+  margin-right: 25px;
 }
 
 .mr30 {
-    margin-right: 30px;
+  margin-right: 30px;
 }
 
 .mr50 {
-    margin-right: 50px;
+  margin-right: 50px;
 }
 
 .mr68 {
-    margin: 0 68px;
+  margin: 0 68px;
 }
 
 .container {
-    max-width: 1240px;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
-    overflow: hidden;
+  max-width: 1240px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 20px;
+  padding-right: 20px;
+  overflow: hidden;
 }
 
 .container-center {
-    max-width: 1240px;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 20px;
-    padding-right: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    position: relative;
+  max-width: 1240px;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 20px;
+  padding-right: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  position: relative;
 }
 
 .section {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-}    
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
 
 
-/*==========header========================*/
+/* header */
 
 .header {
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1000;
-  }
-  
-  .border-header {
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
-    position: relative;
-  }
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+}
 
-  .header-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 23px;
-    padding-bottom: 23px;
-  }
-  
-  .header-inner {
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
-    padding: 20px 0;
-  }
-  
-  .header-logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .logo {
-    margin-right: 20px;
-  }
-  
-  .nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .nav-list {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-  }
-  
-  .nav-list li:first-child {
-    margin-left: 0;
-  }
-  
-  .link-home {
-    font-family: "Comfortaa", sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    padding: 5px 25px 3px;
-    font-size: 15px;
-    line-height: 17px;
-    letter-spacing: 0.15em;
-    text-transform: uppercase;
-    color: #FFFFFF;
-  }
-  
-  .nav-list li:hover {
-    background: #199C3D;
-    transition: all 0.2s;
-  }
-  
-  .instal-apple {
-    margin-right: 20px;
-  }
-  
-  .black-style li {
-    color: black;
-  }
-  
-  .nav-list.black-style li:hover {
-    color: #FFFFFF;
-  }
+.border-header {
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
+}
 
-/*===================intro=================*/
+.header-inner {
+  display: flex;
+  justify-content: space-between;
+  text-align: center;
+  padding: 20px 0;
+}
+
+.header-logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo {
+  margin-right: 20px;
+}
+
+.nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.nav-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.nav-list li:first-child {
+  margin-left: 0;
+}
+
+.link-home {
+  font-family: "Comfortaa", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  padding: 5px 25px 3px;
+  font-size: 15px;
+  line-height: 17px;
+  letter-spacing: 0.15em;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+
+.nav-list li:hover {
+  background: #199C3D;
+  transition: all 0.2s;
+}
+
+.instal-apple {
+  margin-right: 20px;
+}
+
+.black-style li {
+  color: black;
+}
+
+.nav-list.black-style li:hover {
+  color: #FFFFFF;
+}
+
+/* Intro style */
 
 .intro {
   position: relative;
@@ -280,371 +270,369 @@ a {
   height: 1000px;
   padding-top: 83px;
 }
-  
-  .intro-banner {
-    /* height: 1000px;
-    max-width: initial;
-    width: auto; */
-    z-index: -1000;
-  }
-  
-  .intro-container {
-    display: flex;
-    position: absolute;
-    top: -50%;
-    left: 0;
-    transform: translateY(50%);
-  }
-  
-  .intro-content {
-    width: 100%;
-    margin-top: 40px;
-    margin-right: 200px;
-  }
-  
-  .intro-photo {
-    width: 50%;
-  }
-  
-  .intro-photo-size {
-    width: 100%;
-  }
-  
-  .content {
-    flex: auto;
-    width: 100%;
-  }
-  
-  .content-title {
-    margin-bottom: 30px;
-  }
-  
-  .contetnt-subtitle {
-    display: flex;
-    margin-bottom: 80px;
-  }
-  
-  .text-subtitle,
-  .text-red {
-    font-family: "Comfortaa", sans-serif;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 30px;
-    line-height: 150%;
-    color: #FFFFFF;
-  }
-  
-  .text-subtitle {
-    margin-right: 10px;
-  }
-  
-  .text-red {
-    color: #F02B53;
-    font-weight: bold;
-  }
-  
-  .content-text {
-    margin-bottom: 20px;
-    font-family: "Roboto", sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 150%;
-    color: #EFFFE7;
-  }
+
+.home {
+  background: url('/img/header-photo_desc.jpg') center no-repeat;
+  background-size: cover;
+}
+
+.intro-container {
+  display: flex;
+  margin-top: 150px;
+}
+
+.intro-content {
+  width: 40%;
+  margin-top: 50px;
+  margin-right: 198px;
+}
+
+.intro-photo {
+  width: 60%;
+}
+
+.intro-photo-size {
+  width: 100%;
+}
+
+.content {
+  flex: auto;
+  width: 100%;
+}
+
+.content-title {
+  margin-bottom: 30px;
+}
+
+.contetnt-subtitle {
+  display: flex;
+  margin-bottom: 80px;
+}
+
+.h1-ru {
+  font-family: sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 90px;
+  color: rgba(255, 255, 255, 0.08);
+  -webkit-text-stroke: 3px white;
+  text-stroke: 3px white;
+  text-transform: uppercase;
+}
+
+.text-subtitle,
+.text-red {
+  font-family: "Comfortaa", sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 30px;
+  line-height: 150%;
+  color: #FFFFFF;
+}
+
+.text-subtitle {
+  margin-right: 10px;
+}
+
+.text-red {
+  color: #F02B53;
+  font-weight: bold;
+}
+
+.content-text {
+  margin-bottom: 20px;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 150%;
+  color: #EFFFE7;
+}
 
 
 /* BUTTON ---*/
 
-.butt {
-    border-radius: 6px;
-    padding: 15px 30px;
-    justify-content: center;
-    align-items: center;
-    text-transform: uppercase;
+.butt { 
+  border-radius: 6px;
+  padding: 15px 30px;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
 }
 
 .butt-mobile {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
 }
 
 .butt-instal {
-    border-radius: 6px;
-    padding: 9px 20px 6px 20px;
-    justify-content: center;
-    align-items: center;
+  border-radius: 6px;
+  padding: 9px 20px 6px 20px;
+  justify-content: center;
+  align-items: center;
 }
 
 .butt-green {
-    background: #1FB14D;
-    border: 1px solid #1FB14D;
-    color: #fff;
-    transition: background-color .2s;
+  background: #1FB14D;
+  border: 1px solid #1FB14D;
+  color: #fff;
+  transition: background-color .2s;
 }
 
 .butt-text {
-    font-family: 'Comfortaa', sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 16px;
-    line-height: 18px;
-    display: flex;
-    letter-spacing: 0.15em;
-    color: #FFFFFF;
+  font-family: 'Comfortaa', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 18px;
+  display: flex;
+  letter-spacing: 0.15em;
+  color: #FFFFFF;
 }
 
 .butt-green:hover {
-    background-color: #199C3D;
-    border-color: #199C3D;
+  background-color: #199C3D;
+  border-color: #199C3D;
 }
 
 .butt-green-border {
-    border: 2px solid #1FB14D;
-    color: #16C54D;
-    border-radius: 3px;
-    letter-spacing: 0.15em;
+  border: 2px solid #1FB14D;
+  color: #16C54D;
+  border-radius: 3px;
+  letter-spacing: 0.15em;
 }
 
 .butt-green-border:hover {
-    color: #16C54D;
-    border-color: #16C54D;
+  color: #16C54D;
+  border-color: #16C54D;
 }
 
 /***********ICON_FIXET*********/
 
 .icon-social {
-    padding: 44px 20px;
-    position: fixed;
-    top: 50%;
-    right: 0;
-    display: flex;
-    flex-direction: column;
-    background: #FFFFFF;
-    border-radius: 6px 0 0 6px;
-    transform: translateY(-50%);
-    box-shadow: -1px 0px 5px rgba(0, 0, 0, 0.15);
+  padding: 44px 20px;
+  position: fixed;
+  top: 50%;
+  right: 0;
+  display: flex;
+  flex-direction: column;
+  background: #FFFFFF;
+  border-radius: 6px 0 0 6px;
+  transform: translateY(-50%);
+  box-shadow: -1px 0px 5px rgba(0, 0, 0, 0.15);
 }
 
 .icon-fixet {
-    margin-bottom: 30px;
-    display: flex;
-    justify-content: center;
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: center;
 }
 
 .video {
-    margin-top: 60px;
-    margin-bottom: 30px;
+  margin-top: 60px;
+  margin-bottom: 30px;
 }
 
 .title-instal {
-    display: flex;
-    margin-bottom: 120px;
+  display: flex;
+  margin-bottom: 120px;
 }
 
 .text-instal {
-    font-family: 'Comfortaa', sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 30px;
-    line-height: 150%;
-    color: #1FB14D;
+  font-family: 'Comfortaa', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 150%;
+  color: #1FB14D;
 }
 
 .arrow-next {
-    display: flex;
-    align-items: center;
-    align-items: center;
+  display: flex;
+  align-items: center;
+  align-items: center;
 }
 
 .arrow-next::before {
-    content: "";
-    display: flex;
-    margin: 0 20px;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    width: 41px;
-    height: 13px;
-    background-repeat: no-repeat;
-    background-image: url('../img/icon/next.svg');
+  content: "";
+  display: flex;
+  margin: 0 20px;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 41px;
+  height: 13px;
+  background-repeat: no-repeat;
+  background-image: url('../img/icon/next.svg');
 }
 
 .sms-apple {
-    margin-right: 20px;
+  margin-right: 20px;
 }
 
 .info-photo {
-    width: 100%;
-    margin-bottom: 32px;
+  width: 100%;
+  margin-bottom: 32px;
 }
 
 .info-funtome {
-    position: absolute;
-    left: 0;
-    margin: 133px 0 138px 0;
-    width: 50%;
+  position: absolute;
+  left: 0;
+  margin: 133px 0 138px 0;
+  width: 50%;
 }
 
 .title-info {
-    margin-bottom: 30px;
-    font-family: 'Comfortaa', sans-serif;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 50px;
-    line-height: 150%;
-    color: #F02B53;
+  margin-bottom: 30px;
+  font-family: 'Comfortaa', sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 50px;
+  line-height: 150%;
+  color: #F02B53;
 }
 
 .text-info {
-    font-family: 'Roboto', sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 150%;
-    color: #333333;
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 150%;
+  color: #333333;
 
 }
 
 .style-text {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 /********** DETALIS-TEXT**************/
 
 .detalis-text {
-    display: flex;
-    margin-bottom: 203px;
+  display: flex;
+  margin-bottom: 203px;
 }
 
 .text {
-    font-family: 'Comfortaa', sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 30px;
-    line-height: 150%;
-    color: #1FB14D;
-    align-items: center;
+  font-family: 'Comfortaa', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 30px;
+  line-height: 150%;
+  color: #1FB14D;
+  align-items: center;
 }
 
 /*********CONDITIUNS************/
 
 .conditiuns {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .style-conditions {
-    font-family: 'Comfortaa', sans-serif;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 15px;
-    line-height: 17px;
-    display: flex;
-    align-items: center;
-    letter-spacing: 0.15em;
-    text-transform: uppercase;
-    color: #FD4B6F;
+  font-family: 'Comfortaa', sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 15px;
+  line-height: 17px;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.15em;
+  text-transform: uppercase;
+  color: #FD4B6F;
 }
 
 
 /*********FOOTER********/
 footer {
-    width: 100%;
+  width: 100%;
 }
 
 .footer {
-    width: 100%;
-    margin-top: 30px;
-    background-color: #465B6F;
+  width: 100%;
+  margin-top: 30px;
+  background-color: #465B6F;
 }
 
 .footer-container {
-    position: relative;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 39px;
-    padding-bottom: 120px;
+  position: relative;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 39px;
+  padding-bottom: 120px;
 }
 
 .footer-funtome {
-    display: flex;
-    align-items: center;
-    margin-bottom: 80px;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  margin-bottom: 80px;
+  justify-content: space-between;
 }
 
 .funtome-text {
-    font-family: 'Comfortaa', sans-serif;
-    font-style: normal;
-    font-weight: 300;
-    font-size: 41px;
-    line-height: 50px;
-    display: flex;
-    align-items: center;
-    color: #FFFFFF;
+  font-family: 'Comfortaa', sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 41px;
+  line-height: 50px;
+  display: flex;
+  align-items: center;
+  color: #FFFFFF;
 }
 
 .icon-style {
-    width: 50px;
-    height: 55px;
+  width: 50px;
+  height: 55px;
 }
 
 .address {
-    margin: 0 60px;
+  margin: 0 60px;
 }
 
 .footer-contact {
-    display: flex;
-    justify-content: center;
-    font-family: 'Roboto', sans-serif;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 150%;
-    align-items: center;
-    color: #FFFFFF;
+  display: flex;
+  justify-content: center;
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 150%;
+  align-items: center;
+  color: #FFFFFF;
 
 }
 
 .icon-social-footer {
-    position: absolute;
-    bottom: 0;
-    padding: 20px 44px;
-    display: flex;
-    background: #FFFFFF;
-    border-radius: 6px 6px 0 0;
-    transform: translateX(175%);
+  position: absolute;
+  bottom: 0;
+  padding: 20px 44px;
+  display: flex;
+  background: #FFFFFF;
+  border-radius: 6px 6px 0 0;
+  transform: translateX(175%);
 
 }
 
 .icon-footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .mail {
-    display: flex;
+  display: flex;
 
 }
 
 .mail::before {
-    content: "";
-    margin-right: 15px;
-    background-image: url('/img/icon/mail.svg');
-    width: 34px;
-    height: 26px;
-    background-repeat: no-repeat;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
+  content: "";
+  margin-right: 15px;
+  background-image: url('/img/icon/mail.svg');
+  width: 34px;
+  height: 26px;
+  background-repeat: no-repeat;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
-
-
-
-
-
-
-
