--- a/css/style-funtome-blog-str-first.css
+++ b/css/style-funtome-blog-str-first.css
@@ -287,7 +287,7 @@ button[type="submit"] {
 }
 
 
-/* section-comments */
+/* Section-comments */
 
 .section-comments {
     margin-bottom: 100px;
@@ -360,7 +360,7 @@ button[type="submit"] {
     color: #199C3D;
 }
 
-/* user-comments-block */
+/* User-comments-block */
 
 .user-comments {
     display: flex;
