--- a/css/style-funtome-paki.css
+++ b/css/style-funtome-paki.css
@@ -339,7 +339,7 @@ button[type="submit"] {
     margin-bottom: 70px;
 }
 
-/*********section-pages*******/
+/* Section-pages */
 
 .section-pages {
     width: 100%;
