--- a/css/style.css
+++ b/css/style.css
@@ -150,17 +150,16 @@ a {
 }
 
 .container {
-  max-width: 1240px;
+  max-width: 1280px;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
   padding-left: 20px;
   padding-right: 20px;
-  overflow: hidden;
 }
 
 .container-center {
-  max-width: 1240px;
+  max-width: 1280px;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
@@ -209,8 +208,37 @@ a {
   align-items: center;
 }
 
+.header-instal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.instal-but {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+
 .logo {
   margin-right: 20px;
+}
+
+.local-switch {
+  width: 30px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+  color: #fff;
+  border: 1px solid rgba(255, 255, 255, 0.4);
+  border-radius: 3px;
+  text-transform: capitalize;
 }
 
 .nav {
@@ -249,6 +277,14 @@ a {
 }
 
 .instal-apple {
+  width: 20px;
+  height: 25px;
+  margin-right: 20px;
+}
+
+.instal-google {
+  width: 20px;
+  height: 22px;
   margin-right: 20px;
 }
 
@@ -258,6 +294,52 @@ a {
 
 .nav-list.black-style li:hover {
   color: #FFFFFF;
+}
+
+/* Burger */
+
+.burger {
+  display: none;
+  background: none;
+  border: 0;
+  cursor: pointer;
+  padding: 9px 2px;
+  
+}
+
+.burger__item {
+  display: block;
+  width: 36px;
+  height: 4px;
+  background-color: #fff;
+  font-size: 0;
+  color: transparent;
+  position: relative;
+  border-radius: 4px;
+}
+
+.burger__item:before {
+  content:"";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  z-index: 1;
+  top: -13px;
+  background-color: #fff;
+  border-radius: 4px;  
+}
+
+.burger__item:after {
+  content:"";
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  z-index: 1;
+  bottom: -13px;
+  background-color: #fff;
+  border-radius: 4px;
 }
 
 /* Intro style */
@@ -350,9 +432,9 @@ a {
 }
 
 
-/* BUTTON ---*/
+/* Button */
 
-.butt { 
+.butt {
   border-radius: 6px;
   padding: 15px 30px;
   justify-content: center;
@@ -406,7 +488,8 @@ a {
   border-color: #16C54D;
 }
 
-/***********ICON_FIXET*********/
+
+/* Icon-fixet */
 
 .icon-social {
   padding: 44px 20px;
@@ -505,7 +588,8 @@ a {
   margin-bottom: 10px;
 }
 
-/********** DETALIS-TEXT**************/
+
+/* Detalis-text */
 
 .detalis-text {
   display: flex;
@@ -522,7 +606,8 @@ a {
   align-items: center;
 }
 
-/*********CONDITIUNS************/
+
+/* Conditions */
 
 .conditiuns {
   display: flex;
@@ -543,7 +628,8 @@ a {
 }
 
 
-/*********FOOTER********/
+/* Footer */
+
 footer {
   width: 100%;
 }
@@ -600,7 +686,6 @@ footer {
   line-height: 150%;
   align-items: center;
   color: #FFFFFF;
-
 }
 
 .icon-social-footer {
@@ -611,7 +696,6 @@ footer {
   background: #FFFFFF;
   border-radius: 6px 6px 0 0;
   transform: translateX(175%);
-
 }
 
 .icon-footer {
@@ -622,7 +706,6 @@ footer {
 
 .mail {
   display: flex;
-
 }
 
 .mail::before {
