--- a/css/features/media-funtome-features.css
+++ b/css/features/media-funtome-features.css
@@ -1,9 +1,11 @@
-@media screen and (width: 768px) {
+@media screen and (max-width: 1280px) {
 
     /* Media header + intro */
 
     .features {
-        background: url('/img/funtome-features/banner/banner-features-tabl.jpg') center no-repeat;
+        background-image: url('/img/funtome-features/banner/banner-features-tabl.jpg');
+        background-position: center;
+        background-repeat: no-repeat;
     }
 
     .features-container {
@@ -14,11 +16,58 @@
         margin-bottom: 24px;
     }
 
+    /* Content block */
+
+    .features-title {
+        width: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        margin-bottom: 0;
+    }
+
+    .features-iteam {
+        flex-direction: column;
+        margin-bottom: 90px;
+        padding-top: 184px;
+    }
+
+    .features-iteam:nth-child(2n+2) {
+        flex-direction: column-reverse;
+    }
+
+    .features-group {
+        margin-top: 80px;
+    }
+
+    .features-photo {
+        width: 100%;
+        height: auto;
+    }
+
+    .container-img-left {
+       position: static;
+    }
+
+    .features-content {
+        width: 100%;
+        margin-top: 20px;
+    }
+
+    .container-img-right {
+        position: static;
+    }
+
+    .number {
+        width: 243px;
+        height: 173px;
+    }
+
 
     /* Media style index */
     
     .intro {
-        height: 900px;
+        height: 117.1875vw;
     }
 
     .burger {
@@ -71,39 +120,174 @@
         font-size: 18px;
     }
 
+    .title {
+        font-size: 40px;
+    }
+
+    /* Footer */
+
+    .footer-funtome {
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .footer-icon {
+        margin-bottom: 50px;
+    }
+
+    .funtome-text {
+        margin-bottom: 50px;
+        font-size: 40px;
+    }
+
+    .arrow-next {
+        display: none;
+    }
+
+    .icon-style {
+        width: 49px;
+        height: 45px;
+    }
+
+    .footer-contact {
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+
+    /* Media header + intro */
+
+    .features {
+        background-image: url('/img/funtome-features/banner/banner-features-mobl.jpg');
+        background-position: center;
+        background-repeat: no-repeat;
+    }
+
+    .features-container {
+        margin-top: 0px;
+    }
+
+    .content-title-features {
+        margin-bottom: 14px;
+    }
+
     /* Content block */
 
-    .features-title {
-        position: absolute;
-        top: 0;
-        left: 0;
-        margin-bottom: 0;
+    .features-group {
+        margin-top: 70px;
+    }
+
+    .features-text {
+        font-size: 15px;
+    }
+
+    .number {
+        width: 182px;
+        height: 123px;
     }
 
     .features-iteam {
-        display: block;
-        margin-bottom: 90px;
+        margin-bottom: 70px;
+        padding-top: 123px;
     }
 
-    .features-group {
-        margin-top: 80px;
+    /* Media style index */
+
+    .intro {
+        height: 169.4444vw;
     }
 
-    .features-photo {
-        height: 810px;
+    .logo {
+        width: 31px;
+        height: 28px;
     }
 
-    .container-img-left {
-       top: 230px;
-       left: 0;
+    .local-switch {
+        width: 26px;
+        height: 26px;
+        font-size: 13px;
+        line-height: 15px;
     }
 
-    .features-content {
-        width: 100%;
+    .instal-apple {
+        width: 21px;
+        height: 27px;
+        margin-right: 20px;
     }
 
-    .container-img-right {
-        top: 230px;
-        right: 0;
+    .instal-google {
+        width: 21px;
+        height: 23px;
+    }
+    
+    .burger__item {
+        width: 26px;
+        height: 3px;
+        border-radius: 3px;
+
+    }
+
+    .h1-ru {
+        font-size: 40px;
+        text-align: center;
+        -webkit-text-stroke: 1px white;
+    }
+
+    .text-red {
+        font-size: 15px;
+        text-align: center;
+    }
+
+    .content-text {
+        display: none;
+    }
+
+    .conditiuns {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .style-conditions,
+    .style-conditions-pol {
+        font-size: 12px;
+        line-height: 13px;
+        text-align: center;
+        margin-right: 0;
+    }
+
+    .style-conditions {
+        margin-bottom: 20px;
+    }
+
+    .title {
+        font-size: 30px;
+    }
+
+    /* Footer */
+
+    .footer-icon {
+        margin-right: 0;
+        margin-bottom: 20px;
+    }
+
+    .funtome-text {
+        margin-bottom: 20px;
+        font-size: 25px;
+    }
+
+    .footer-funtome {
+        flex-direction: column;
+        margin-bottom: 40px;
+    }
+
+    .footer-contact {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .address {
+        margin: 10px 0 10px 0;
     }
 }
