--- a/css/features/media-funtome-features.css
+++ b/css/features/media-funtome-features.css
@@ -1,3 +1,10 @@
+@media screen and (min-width: 1921px) {
+
+    
+
+}
+
+
 @media screen and (max-width: 1280px) {
 
     /* Media header + intro */
@@ -47,6 +54,7 @@
 
     .container-img-left {
        position: static;
+       width: 100%;
     }
 
     .features-content {
@@ -56,6 +64,7 @@
 
     .container-img-right {
         position: static;
+        width: 100%;
     }
 
     .number {
@@ -63,95 +72,10 @@
         height: 173px;
     }
 
-
-    /* Media style index */
-    
-    .intro {
-        height: 117.1875vw;
-    }
-
-    .burger {
-        display: block;
-    }
-
-    .nav {
-        display: none;
-    }
-
-    .logo {
-        width: 50px;
-        height: 45px;
-    }
-
-    .local-switch {
-        width: 34px;
-        height: 34px;
-        font-size: 18px;
-        line-height: 21px;
-    }
-
-    .instal-apple {
-        width: 26px;
-        height: 33px;
-        margin-right: 26px;
-    }
-
-    .instal-google {
-        width: 26px;
-        height: 29px;
-    }    
-
-    .h1-ru {
-        font-size: 70px;
-        text-align: center;
-    }
-
-    .contetnt-subtitle {
-        margin-bottom: 47px;
-       justify-content: center;
-    }
-
-    .text-red {
-        font-size: 20px;
-        text-align: center;
-    }
-
-    .content-text {
-        font-size: 18px;
-    }
-
     .title {
         font-size: 40px;
     }
 
-    /* Footer */
-
-    .footer-funtome {
-        flex-wrap: wrap;
-        justify-content: center;
-    }
-
-    .footer-icon {
-        margin-bottom: 50px;
-    }
-
-    .funtome-text {
-        margin-bottom: 50px;
-        font-size: 40px;
-    }
-
-    .arrow-next {
-        display: none;
-    }
-
-    .icon-style {
-        width: 49px;
-        height: 45px;
-    }
-
-    .footer-contact {
-        font-size: 16px;
-    }
 }
 
 @media screen and (max-width: 767px) {
@@ -192,102 +116,13 @@
         padding-top: 123px;
     }
 
-    /* Media style index */
-
-    .intro {
-        height: 169.4444vw;
-    }
-
-    .logo {
-        width: 31px;
-        height: 28px;
-    }
-
-    .local-switch {
-        width: 26px;
-        height: 26px;
-        font-size: 13px;
-        line-height: 15px;
-    }
-
-    .instal-apple {
-        width: 21px;
-        height: 27px;
-        margin-right: 20px;
-    }
-
-    .instal-google {
-        width: 21px;
-        height: 23px;
-    }
-    
-    .burger__item {
-        width: 26px;
-        height: 3px;
-        border-radius: 3px;
-
-    }
-
-    .h1-ru {
-        font-size: 40px;
-        text-align: center;
-        -webkit-text-stroke: 1px white;
-    }
-
-    .text-red {
-        font-size: 15px;
-        text-align: center;
-    }
-
-    .content-text {
-        display: none;
-    }
-
-    .conditiuns {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .style-conditions,
-    .style-conditions-pol {
-        font-size: 12px;
-        line-height: 13px;
-        text-align: center;
-        margin-right: 0;
-    }
-
-    .style-conditions {
-        margin-bottom: 20px;
-    }
-
     .title {
         font-size: 30px;
     }
 
-    /* Footer */
 
-    .footer-icon {
-        margin-right: 0;
-        margin-bottom: 20px;
-    }
+}
 
-    .funtome-text {
-        margin-bottom: 20px;
-        font-size: 25px;
-    }
-
-    .footer-funtome {
-        flex-direction: column;
-        margin-bottom: 40px;
-    }
-
-    .footer-contact {
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .address {
-        margin: 10px 0 10px 0;
-    }
+@media screen and (max-width: 359px) {
+    
 }
