--- a/css/home/style.css
+++ b/css/home/style.css
@@ -561,13 +561,15 @@ a {
 }
 
 
-.video {
+#video {
+  width: 100%;
   margin-top: 60px;
   margin-bottom: 30px;
 }
 
 .title-instal {
   display: flex;
+  justify-content: center;
   margin-bottom: 120px;
 }
 
@@ -589,7 +591,8 @@ a {
 .arrow-next::before {
   content: "";
   display: flex;
-  margin: 0 20px;
+  margin-left: 20px;
+  margin-right: 20px;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
@@ -644,6 +647,7 @@ a {
 
 .detalis-text {
   display: flex;
+  justify-content: center;
   margin-bottom: 203px;
 }
 
